--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.24.1'
 
     - name: Build
-      run: go build -v ./...
+      run: .\make.ps1 build-release
 
     - name: Test
-      run: go test -v ./...
+      run: .\make.ps1 test
