--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Go
+name: Commit
 
 on:
   push:
@@ -16,13 +16,31 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Use Node.js 22.x
+      uses: actions/setup-node@v4
+      with:
+        cache-dependency-path: front/package-lock.json
+        node-version: '22.x'
+        cache: 'npm'
+
+    - name: Install frontend dependencies
+      working-directory: .\front
+      run: npm ci
+
+    - name: Build frontend
+      working-directory: .\front
+      run: npm run build
+
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.24.1'
 
-    - name: Build
+    - name: Build (release)
       run: .\make.ps1 build-release
+
+    - name: Build (debug)
+      run: .\make.ps1 build
 
     - name: Test
       run: .\make.ps1 test
