--- a/front/package.json
+++ b/front/package.json
@@ -7,14 +7,17 @@
         "start": "vite",
         "dev": "vite",
         "build": "vite build",
-        "serve": "vite preview"
+        "serve": "vite preview",
+        "test": "vitest"
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/node": "^22.15.30",
         "typescript": "^5.7.2",
         "vite": "^6.0.0",
         "vite-plugin-singlefile": "^2.2.0",
-        "vite-plugin-solid": "^2.11.6"
+        "vite-plugin-solid": "^2.11.6",
+        "vitest": "^3.2.2"
     },
     "dependencies": {
         "solid-js": "^1.9.5"
